fix(search): hide x icon on IE (#413)

--- a/src/components/search/_search.scss
+++ b/src/components/search/_search.scss
@@ -41,6 +41,10 @@
       @include placeholder-colors;
       font-weight: 400;
     }
+
+    &::-ms-clear {
+      display: none;
+    }
   }
 
   .bx--search--sm .bx--search-input {
